# polena

./: .gitignore  README.md  main.py  pyproject.toml
data/: sample_etfs.json  sample_portfolio.json
robo_advisor/: __init__.py  engine.py  report.py
robo_advisor/analytics/: __init__.py  returns.py  risk_metrics.py
robo_advisor/costs/: __init__.py  transaction.py
robo_advisor/data/: __init__.py  fetcher.py
robo_advisor/models/: __init__.py  constraints.py  etf_universe.py  portfolio.py
robo_advisor/optimization/: __init__.py  base.py  mean_variance.py  min_cvar.py  risk_parity.py
